[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Fastest integration tests"
authors = ["Andrey Orsoev <andrey.orsoev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2021.1"
Django = "^3.2.13"
django-configurations = "^2.2"
psycopg2-binary = "^2.9.1"
dj-database-url = "^0.5.0"
django-model-utils = "^4.1.1"
django-unique-upload = "^0.2.1"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
django-storages = "^1.11.1"
boto3 = "^1.17.97"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^7.24.1"
mkdocs = "^1.2.3"
flake8 = "^3.9.2"
mock = "^4.0.3"
factory-boy = "^3.2.0"
django-nose = "^1.4.7"
nose-progressive = "^1.5.2"
coverage = "^5.5"
black = "^21.6b0"
isort = "^5.8.0"
pre-commit = "^2.13.0"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py39']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]
